--- a/html/ejercicio1.html
+++ b/html/ejercicio1.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo Formulario # 1</title>
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    
+    <div class="cont-contactBtn">
+        <div class="cont-flip">
+          </div>
+          <div class="back">
+            <a href="#" class="flip close"></a>
+            <form class="contact-form" action="">
+              <input class="gutter" type="text" placeholder="Name">
+              <input type="text" placeholder="Company">
+              <input class="gutter" type="text" placeholder="Telephone">
+              <input type="text" placeholder="Email">
+              <textarea name="" id="" placeholder="Leave a message"></textarea>
+              <input type="submit" value="Send">
+            </form>
+          </div>
+        </div>
 </body>
 </html>
